<?xml version="1.0"?>
<package format="2">
  <name>template_solution_dz01</name>
  <version>0.0.0</version>
  <description>Template solution DZ01</description>
  <maintainer email="juraj.orsulic@fer.hr">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
